@@ -748,4 +748,6 @@ y - 1473852319020386314)]~
 *y^3 + 1/110*y^2 + 57/110*y + 1/110, y^4 + 57*y^2 + 661)]
 [Mod(-1/55*y^3 + 1/110*y^2 - 57/110*y + 1/110, y^4 + 57*y^2 + 661), Mod(1/55
 *y^3 + 1/110*y^2 + 57/110*y + 1/110, y^4 + 57*y^2 + 661)]
-Total time spent: 8363
+[Mod(-44*a + 328/3, a^2 - a + 3), Mod(-40*a - 80/3, a^2 - a + 3)]
+[-2, 2]
+Total time spent: 8068
