@@ -115,6 +115,7 @@ PB   86- subst(Mod(1/z, y), z, x) -> wrong answer [#1949]
 BA   88- [pthread] thread stacks could silently overflow
 BA   89- iferr(1/0,E,1,break()) -> SEGV
      90- missing reduction in mathnfmodid(M, t_INT)
+     91- missing roots in nfroots (when r2>0) [#1956,#1957]
 
   Added
       1- [libari] ZM_isidentity
